# linenoise-rs

./: Cargo.toml  README.md
linenoise-sys/: Cargo.toml  build.rs  lib.rs
linenoise_sys/: Cargo.toml  build.rs  lib.rs
src/: lib.rs
src/examples/: linenoise_example.rs
