[package]
name = "linenoise-sys"
version = "1.0.2"
authors = ["Corey Richardson <corey@octayn.net>", "Pierre Baillet <pierre@baillet.name>", "Till Schneidereit <till@tillschneidereit.net>"]
license = "BSD-2-Clause"
keywords = ["readline", "linenoise", "command", "line", "editing"]
repository = "https://github.com/cmr/linenoise-rs"
homepage = "https://github.com/cmr/linenoise-rs"
description = "Bindings to linenoise for simple line-editing facilities."

build = "build.rs"
links = "linenoise"

[lib]
name = "linenoise_sys"
path = "lib.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.1"
